# nanollama

./: .gitignore  GUIDE.md  README.md  arianna_humanai.txt  pyproject.toml  requirements.txt
config/: __init__.py  train_large.py  train_medium.py  train_micro.py  train_mini.py  train_nano.py  train_small.py
data/: __init__.py  prepare_fineweb.py  prepare_multi_corpus.py  prepare_personality.py  prepare_shakespeare.py  prepare_tinystories.py
go/: gamma.go  gguf.go  go.mod  main.go  model.go  npy.go  quant.go  tokenizer.go
nanollama/: __init__.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  llama.py  lora.py  optim.py  tokenizer.py  ui.html
runs/: lambda_setup.sh  lambda_train.sh  miniseries.sh  runcpu.sh  scaling_laws.sh  speedrun.sh  train_wtforacle.sh
scripts/: __init__.py  base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  compare_models.py  export_gguf.py  extract_gamma.py  inject_gamma.py  quantize_gguf.py  tok_eval.py  tok_train.py  train_pipeline.py  train_tokenizer.py
tasks/: __init__.py  arc.py  common.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: __init__.py  smoke_test.py  test_llama.py  test_model.py  test_pipeline.py
