[project]
name = "nanollama"
version = "0.1.0"
description = "Train Llama 3 models from scratch — any scale, any personality. By Arianna Method."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Arianna Method", email = "theariannamethod@gmail.com"},
]
keywords = ["llama", "llm", "transformer", "deep-learning", "pytorch", "training", "from-scratch", "gguf", "personality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "filelock>=3.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ariannamethod/nanollama"
Repository = "https://github.com/ariannamethod/nanollama"
Issues = "https://github.com/ariannamethod/nanollama/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanollama*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# PyTorch sources for different platforms
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
